# startup-intelligence

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/skills/ingest-summary/: SKILL.md
.claude/skills/model-bakeoff/: SKILL.md  preflight.py
.claude/skills/postings-window/: SKILL.md  postings_window.py
.github/workflows/: ingest.yml  online_eval.yml  run_skills.yml  run_tracker.yml
scripts/: dedup_extractions.py  embed.py  eval_models.py  eval_query.py  ingest.py  online_eval.py  probe_packages.py  query.py  run_skills.py  run_tracker.py  serve.py  test_ats_live.py
src/: config.py  llm_structured.py  observability.py  roles.py
src/agents/: state.py
src/agents/query/: __init__.py  graph.py  nodes.py  run.py  sql.py  state.py
src/agents/skills/: graph.py  nodes.py  state.py
src/agents/tracker/: __init__.py  dossier.py  graph.py  nodes.py  state.py
src/eval/: __init__.py  extraction_quality.py  llm.py  query_dataset_seed.py  query_quality.py
src/ingestion/: diff.py  embed.py  snapshot.py  watchlist.py
src/ingestion/ats/: __init__.py  _utils.py  ashby.py  greenhouse.py  lever.py  models.py  workable.py
src/ingestion/signals/: blog_rss.py  github_org.py  package_downloads.py
src/outputs/: linear.py  notion.py
src/serving/: __init__.py  app.py  auth.py  limits.py  schemas.py  settings.py
src/store/: db.py  schema.sql
src/taxonomy/: aliases.yaml
tests/: test_extraction_quality.py  test_ingestion_embed.py  test_ingestion_snapshot.py  test_linear_outputs.py  test_llm_structured.py  test_notion_dossier.py  test_observability.py  test_package_downloads.py  test_query_graph.py  test_query_nodes.py  test_query_quality.py  test_query_run.py  test_query_sql.py  test_resolve_board.py  test_serving.py  test_skills_graph.py  test_skills_nodes.py  test_tracker_dossier.py  test_tracker_graph.py  test_tracker_nodes.py
