[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "startup-intelligence"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "psycopg[binary]>=3.1",
    "psycopg-pool>=3.2",
    "pgvector>=0.3",
    "python-dotenv>=1.0",
    "langgraph>=0.2",
    "langgraph-checkpoint-postgres>=2.0",
    "langchain-anthropic>=0.3",
    "langchain-ollama>=0.3",
    "pyyaml>=6.0",
    "feedparser>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint.per-file-ignores]
# scripts/ entrypoints insert src/ onto sys.path before importing the package,
# so module-level imports intentionally follow that statement.
"scripts/*" = ["E402"]

[tool.mypy]
python_version = "3.12"
strict = true
# src/ is the single source root: modules resolve as `config`, `store.db`, etc.
# Pin the base explicitly so `mypy src` maps each file to one canonical module
# name (otherwise it sees e.g. both `db` and `store.db` -> "found twice").
mypy_path = "src"
explicit_package_bases = true

# feedparser ships no type stubs or py.typed marker; nothing to gain from
# checking it. (PyYAML is covered by the types-PyYAML dev dependency.)
[[tool.mypy.overrides]]
module = ["feedparser"]
ignore_missing_imports = true

# pgvector ships no py.typed marker / stubs; the psycopg adapter import is
# untyped. Nothing to gain from strict-checking it.
[[tool.mypy.overrides]]
module = ["pgvector", "pgvector.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
